[gd_scene load_steps=9 format=3 uid="uid://ck2p0yutvaylv"]

[ext_resource type="Script" path="res://Scripts/Shop/shop-weapons.gd" id="1_bfva5"]
[ext_resource type="PackedScene" uid="uid://d4fhf1eceikhe" path="res://Scenes/Cards/card-weapons.tscn" id="2_07xml"]
[ext_resource type="Texture2D" uid="uid://dbvfheemwkhbh" path="res://Assets/Artwork/card-128-holder.png" id="3_ksecs"]
[ext_resource type="Texture2D" uid="uid://ce78lakja4s6m" path="res://Assets/Artwork/Buy.png" id="3_m4om8"]
[ext_resource type="Texture2D" uid="uid://cn1y8dmptrurh" path="res://Assets/Artwork/point-left.png" id="4_0eov0"]
[ext_resource type="Texture2D" uid="uid://bu728gp2pm6ph" path="res://Assets/Artwork/Sell.png" id="5_1pmo2"]
[ext_resource type="Texture2D" uid="uid://bnofiqsu2h2u4" path="res://Assets/Artwork/point-right.png" id="5_3detl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2u55"]
size = Vector2(130, 130)

[node name="Shop" type="Node2D"]
script = ExtResource("1_bfva5")

[node name="Card" parent="." instance=ExtResource("2_07xml")]
offset_left = 104.0
offset_top = 72.0
offset_right = 104.0
offset_bottom = 72.0
metadata/_edit_use_anchors_ = true

[node name="Buy" type="Button" parent="Card"]
offset_left = -32.0
offset_top = 64.0
offset_right = 32.0
offset_bottom = 102.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Card/Buy"]
position = Vector2(32, 16)
texture = ExtResource("3_m4om8")

[node name="Card2" parent="." instance=ExtResource("2_07xml")]
offset_left = 248.0
offset_top = 72.0
offset_right = 248.0
offset_bottom = 72.0
metadata/_edit_use_anchors_ = true

[node name="Buy" type="Button" parent="Card2"]
offset_left = -32.0
offset_top = 64.0
offset_right = 32.0
offset_bottom = 102.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Card2/Buy"]
position = Vector2(32, 16)
texture = ExtResource("3_m4om8")

[node name="Card3" parent="." instance=ExtResource("2_07xml")]
offset_left = 392.0
offset_top = 72.0
offset_right = 392.0
offset_bottom = 72.0
metadata/_edit_use_anchors_ = true

[node name="Buy" type="Button" parent="Card3"]
offset_left = -32.0
offset_top = 64.0
offset_right = 32.0
offset_bottom = 102.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Card3/Buy"]
position = Vector2(32, 16)
texture = ExtResource("3_m4om8")

[node name="Card4" parent="." instance=ExtResource("2_07xml")]
offset_left = 536.0
offset_top = 72.0
offset_right = 536.0
offset_bottom = 72.0
metadata/_edit_use_anchors_ = true

[node name="Buy" type="Button" parent="Card4"]
offset_left = -32.0
offset_top = 64.0
offset_right = 32.0
offset_bottom = 102.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Card4/Buy"]
position = Vector2(32, 16)
texture = ExtResource("3_m4om8")

[node name="WeaponHolder1" type="Sprite2D" parent="."]
position = Vector2(440, 288.5)
scale = Vector2(1, 0.992308)
texture = ExtResource("3_ksecs")

[node name="Area2D" type="Area2D" parent="WeaponHolder1"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponHolder1/Area2D"]
visible = false
shape = SubResource("RectangleShape2D_x2u55")

[node name="Sell" type="Button" parent="WeaponHolder1"]
offset_left = -288.0
offset_top = 39.8062
offset_right = -208.0
offset_bottom = 71.8062

[node name="Sprite2D" type="Sprite2D" parent="WeaponHolder1/Sell"]
position = Vector2(40, 16.124)
texture = ExtResource("5_1pmo2")

[node name="WeaponEquipped1" parent="." instance=ExtResource("2_07xml")]
offset_left = 440.0
offset_top = 288.5
offset_right = 440.0
offset_bottom = 288.5
metadata/_edit_use_anchors_ = true

[node name="Power-Down" type="Button" parent="."]
offset_left = 320.0
offset_top = 264.5
offset_right = 368.0
offset_bottom = 312.5

[node name="Point-left" type="Sprite2D" parent="Power-Down"]
position = Vector2(24, 24)
scale = Vector2(2, 2)
texture = ExtResource("4_0eov0")

[node name="Power-Up" type="Button" parent="."]
offset_left = 512.0
offset_top = 264.5
offset_right = 560.0
offset_bottom = 312.5

[node name="Point-right" type="Sprite2D" parent="Power-Up"]
position = Vector2(24, 24)
scale = Vector2(2, 2)
texture = ExtResource("5_3detl")

[connection signal="pressed" from="Power-Down" to="." method="_on_power_down_pressed"]
[connection signal="pressed" from="Power-Up" to="." method="_on_power_up_pressed"]
